# prompt-shield

./: .gitignore  CLAUDE.md  README.md  cli.py  pyproject.toml  requirements-dashboard.txt  requirements.txt
.github/workflows/: ci.yml
dashboard/: README.md  __init__.py  data.py  main.py
dashboard/templates/: _detail.html  _stats.html  _table.html  index.html
detector/: __init__.py  addon.py  config.py  extract.py  overlay.py  platform_utils.py  providers.yaml  sse.py
detector/static/: promptshield_overlay.js
dlp/: __init__.py  blocked_page.html  blocked_page.py  config.yaml  engine.py  local_llm_backend.py  presidio_backend.py
recorder/: addon.py
tests/: build_fixtures.py  test_detector.py  test_dlp.py  test_overlay.py
tests/fixtures/: README.md  chatgpt.json  claude.json  gemini.json  grok.json  perplexity.json
